# A.C.E

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMERCIAL_LICENSE.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  LICENSING.md  NOTICE  README.md  SECURITY.md  policy.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture.md  architecture_diagram.mmd  extension_roadmap.md  integration_guide.md  runpod_quickstart.md  sandbox_tunnel.md
examples/: containment_benchmark.py  exfil_attempt_demo.py  integrated_sandbox_tunnel_demo.py  label_propagation_demo.py  local_mock_agent_demo.py  math_physics_advisor_demo.py  runpod_api_demo.py  runpod_hf_demo.py  runpod_smoke.py  sandbox_backend_demo.py  sandbox_exfil_demo.py  secure_agent_demo.py  tee_attestation_demo.py  windows_sandbox_demo.py
scripts/: api_verify.py  build_sandbox_image.sh  export_compliance_pack.py  generate_mermaid.py  hf_verify.py  runpod_api_setup.sh  runpod_bootstrap.sh  runpod_hf_setup.sh  runpod_smoke.sh
src/aegis/: __init__.py
src/aegis/audit/: __init__.py  compliance_export.py  metrics.py  persistent_log.py  tamper_proof_log.py
src/aegis/core/: __init__.py  containment_engine.py  policy.py  session.py
src/aegis/crypto/: __init__.py  encryption_fields.py  equivariant.py  primitives.py
src/aegis/execution/: __init__.py  api_llm_workload.py  exfil_workload.py  hf_runtime.py  hf_workload.py  instrumented_runner.py  math_physics.py  mock_model.py  tee_abstraction.py  tee_amd_sev_snp.py  tee_factory.py  tee_intel_tdx.py  tee_linux.py  tee_platform.py
src/aegis/guardians/: __init__.py  egress_controller.py  output_guardian.py  verification.py
src/aegis/ifc/: __init__.py  agent_planner.py  flow_control.py  labels.py
src/aegis/redteam/: __init__.py  canary.py  simulator.py
src/aegis/sandbox/: __init__.py  _worker.py  base.py  docker_sandbox.py  environment.py  facade.py  labels.py  manager.py  registry.py  simulated_sandbox.py  workloads.py
src/aegis/sandbox/backends/: __init__.py  _subprocess.py  bubblewrap.py  docker.py  firecracker.py  gvisor.py  process.py  windows.py
src/aegis/tunnel/: __init__.py  gateway.py  mcp_adapter.py  policy_endpoint.py  providers.py  simulated_tunnel.py
src/aegis/utils/: config.py  typing.py  visualization.py
tests/: conftest.py  sandbox_helpers.py  test_coverage_extras.py  test_encryption_fields.py  test_end_to_end_containment.py  test_equivariant.py  test_guardians.py  test_ifc_flow_control.py  test_integrated_containment.py  test_persistent_log.py  test_redteam_simulator.py  test_sandbox.py  test_sandbox_coverage.py  test_sandbox_registry.py  test_sandbox_worker.py  test_tamper_proof_log.py  test_tee_platforms.py  test_tunnel.py  test_windows_sandbox.py
